src/test/resources/frontendReference/invalid/semanticErr/variables/doubleDeclare.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:2 -- "x" is already defined in this scope
